tests2/curl/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: add-jwt-header
  namespace: curl
spec:
  workloadSelector:
    labels:
      app: curl
  configPatches:
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_OUTBOUND
      patch:
        operation: MERGE
        value:
          request_headers_to_add:
            - header:
                key: "Authorization"
                value: "Bearer eyJhbGciOiJSUzI1NiIsInR5cCIgOiAiSldUIiwia2lkIiA6ICJYRll1bW15UnhuWjdHSWVqdHFMTnFWbmk5QVUwckkzaFFoZng2aWhRNGZRIn0.eyJleHAiOjE3NDE3MDAxNjEsImlhdCI6MTc0MTY5OTg2MSwianRpIjoiNDliMDdhMjItNTIxZS00NmUzLThiOTMtZTZiN2ZhYjgwNGUxIiwiaXNzIjoiaHR0cDovLzE5Mi4xNjguMzkuMjM5OjMyMjYyL3JlYWxtcy9uZXdfc2l0ZV9yZWFsbSIsImF1ZCI6ImFjY291bnQiLCJzdWIiOiJkNjk3NWM0Yi0yYTY5LTQ1MTItODA0OC1hYWE1YTA3Y2I2ZTYiLCJ0eXAiOiJCZWFyZXIiLCJhenAiOiJuZXdfc2l0ZV9jbGllbnQiLCJzaWQiOiIzYzhkZTkyZC1hMDc0LTRmMzktYjEzO [...]
